cambios por Ernesto

--- a/contacto/index.html
+++ b/contacto/index.html
@@ -71,7 +71,9 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon">   
+            <i class="fas fa-bars" style="color:#204acf; font-size:24px;"></i>
+          </span>
           </button>
 
           <div class=" collapse sticky-top navbar-collapse" id="navbarSupportedContent">
