--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
-              <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon">   
+              <i class="fas fa-bars" style="color:#fff; font-size:24px;"></i>
+            </span>
             </button>
 
             <div class=" collapse sticky-top navbar-collapse" id="navbarSupportedContent">
@@ -71,7 +73,7 @@
           </h1>
           <div class="hero-buttons">
             <a class="btn btn-full btn-header btn-header-1" href="contacto/"> Contáctanos </a>
-            <a class="btn btn-full btn-header btn-header-2" href="cotizador/"> Cotizador </a>
+            <a class="btn btn-full btn-header btn-header-2" href="cotizador/"> Cotizador de paquetería </a>
           </div>
           
         </div>
@@ -107,6 +109,10 @@
     </section>
 
     <section class="soluciones">
+      <h2 class="section-title seccion-servicios">
+          Nuestros Servicios
+      </h2>
+      <span class="divider"></span>
       <ul class="soluciones-showcase clearfix">
         <li>
           <figure class="soluciones-img">
