--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <ul class="soluciones-showcase clearfix">
         <li>
           <figure class="soluciones-img">
-            <img src="resources/img/Dedicados.png" />
+            <a href="/servicios#transporte-dedicado"><img src="resources/img/Dedicados.png" /></a>
           </figure>
         </li>
         <li>
