--- a/servicios/index.html
+++ b/servicios/index.html
@@ -92,7 +92,7 @@
         <div class="col-lg-5 img-servicios pos-5">
           <img src="../resources/img/Dedicados-serv.png" />
         </div>
-        <div class="col-lg-7 desc-servicios pos-6">
+        <div class="col-lg-7 desc-servicios pos-6" id="transporte-dedicado">
           <h3>Transporte Dedicado</h3>
           <p>
             En EXVASA ponemos al servicio de tu empresa, nuestra flotilla de camiones para el transporte de 
