link entre imagenes inicio a /servicios

--- a/index.html
+++ b/index.html
@@ -121,29 +121,29 @@
         </li>
         <li>
           <figure class="soluciones-img">
-            <img src="resources/img/Paqueteria.png" />
+            <a href="/servicios#paqueteria"><img src="resources/img/Paqueteria.png" /></a>
           </figure>
         </li>
         <li>
           <figure class="soluciones-img">
-            <img src="resources/img/personal.png" />
+            <a href="/servicios#personal"><img src="resources/img/personal.png" /></a>
           </figure>
         </li>
       </ul>
       <ul class="soluciones-showcase clearfix">
         <li>
           <figure class="soluciones-img">
-              <img src="resources/img/renta.png" />
+              <a href="/servicios#renta-remolques"><img src="resources/img/renta.png" /></a>
           </figure>
         </li>
         <li>
           <figure class="soluciones-img">
-            <img src="resources/img/Almacenamiento.png" />
+            <a href="/servicios#almacenamiento"><img src="resources/img/Almacenamiento.png" /></a>
           </figure>
         </li>
         <li>
           <figure class="soluciones-img">
-            <img src="resources/img/Asesoramiento.png" />
+            <a href="/servicios#asesoramiento"><img src="resources/img/Asesoramiento.png" /></a>
           </figure>
         </li>
       </ul>
