--- a/servicios/index.html
+++ b/servicios/index.html
@@ -88,11 +88,11 @@
     </section>
 
     <section id="showcase-servicios">
-      <div class="row row-showcase">
+      <div class="row row-showcase" id="transporte-dedicado">
         <div class="col-lg-5 img-servicios pos-5">
           <img src="../resources/img/Dedicados-serv.png" />
         </div>
-        <div class="col-lg-7 desc-servicios pos-6" id="transporte-dedicado">
+        <div class="col-lg-7 desc-servicios pos-6" >
           <h3>Transporte Dedicado</h3>
           <p>
             En EXVASA ponemos al servicio de tu empresa, nuestra flotilla de camiones para el transporte de 
@@ -101,8 +101,8 @@
           </p>
         </div>
       </div>
-      <div class="row row-showcase">
-          <div class="col-lg-7 desc-servicios pos-7">
+      <div class="row row-showcase" id="paqueteria">
+          <div class="col-lg-7 desc-servicios pos-7" >
             <h3>Paquetería</h3>
             <p>
               Uno de los servicios más solicitados. Ofrecemos la oportunidad de transportar todo tipo de 
@@ -110,11 +110,11 @@
               cualquier tamaño que buscan minimizar gastos de traslado, así como particulares. 
             </p>
           </div>
-          <div class="col-lg-5 img-servicios pos-8">
+          <div class="col-lg-5 img-servicios pos-8" id="">
             <img src="../resources/img/Paqueteria-serv.png" />
           </div>
         </div>
-        <div class="row row-showcase">
+        <div class="row row-showcase" id="personal">
             <div class="col-lg-5 img-servicios pos-9">
               <img src="../resources/img/personal-serv.png" />
             </div>
@@ -126,7 +126,7 @@
               </p>
             </div>
           </div>
-          <div class="row row-showcase">
+          <div class="row row-showcase" id="renta-remolques">
               <div class="col-lg-7 desc-servicios pos-11">
                 <h3>Renta de remolques</h3>
                 <p>
@@ -139,7 +139,7 @@
                 <img src="../resources/img/renta-serv.png" />
               </div>
             </div>
-      <div class="row row-showcase">
+      <div class="row row-showcase" id="almacenamiento">
         <div class="col-lg-5 img-servicios pos-1">
           <img src="../resources/img/Almacenamiento-serv.png" />
         </div>
@@ -152,7 +152,7 @@
           </p>
         </div>
       </div>
-      <div class="row row-showcase">
+      <div class="row row-showcase" id="asesoramiento">
         <div class="col-lg-7 desc-servicios pos-3">
           <h3>Asesoramiento</h3>
           <p>
