--- a/index.html
+++ b/index.html
@@ -181,39 +181,46 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <h2>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              El tiempo que he trabajado con Exvasa nos han apoyado en el cambio constante de puntos de recolección, 
+              entendiendo siempre que estos cambios son solicitados por la difícil situación que se vive en la zona. 
+              Esto genera tranquilidad al personal que recibe el servicio y a la empresa en general. Otro punto importante, 
+              es que siempre muestran apertura para recibir retroalimentación cuando esta es requerida, lo cual fortalece 
+              la relación comercial que se tiene. En general podría decir que el nivel de servicio y la atención a 
+              cliente brindada es siempre la adecuada.
             </h2>
             <img
               class="testimonial-img"
               src="resources/img/6.jpg"
               alt="ranchero-profile"
             />
-            <em>Ranchito, Tierrozo</em>
+            <em>Sr. Operations - Ryder México</em>
           </div>
           <div class="carousel-item">
             <h2>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Actualmente las necesidades y requerimientos para el abasto de transporte cada vez son de más exigencia y 
+              sobre todo de mayor compromiso por parte de las líneas transportistas. Para Spiral  Logistics y Clogistics  
+              ha sido un complemento ideal para nuestra cadena de suministro el  trabajar con EXVASA , una línea de 
+              transporte altamente comprometida y eficiente para llevar a cabo la distribución de todos nuestros clientes 
+              dentro del territorio nacional, evitando incidencias y  costos adicionales para nuestra operación.
             </h2>
             <img
               class="testimonial-img"
               src="resources/img/2.jpg"
               alt="lego-profile"
             />
-            <em>Dabadu, Dabadabadu</em>
+            <em>Gerencia de Compras Clogistics</em>
           </div>
           <div class="carousel-item">
             <h2>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua..
+              ¡Excelente servicio! EXVASA cuenta con un personal altamente capacitado para recolectar, transportar y 
+              entregar mercancía en buenas condiciones. Recomendamos su servicio, tienen muy buena atención.
             </h2>
             <img
               class="testimonial-img"
               src="resources/img/8.jpg"
               alt="lego-profile"
             />
-            <em>Fondo de Bikini</em>
+            <em>Materias Primas Cuellar</em>
           </div>
         </div>
         <a
