celaya en /contacto

--- a/contacto/index.html
+++ b/contacto/index.html
@@ -119,6 +119,16 @@
           </p>
         </div>
       </div>
+      <div class="row cd celaya-cd">
+        <div class="col-lg-12 celaya">
+          <span class="ciudad"> Celaya </span> <br />
+          <p class="info-ciudad">
+            Celaya celayita celaya
+            <br />Delagación de Celaya <br />C.P. 01234 <br />Tel.
+            (55)5555555
+          </p>
+        </div>
+      </div>
     </section>
 
     <!-- <section id="formulario">
