--- a/index.html
+++ b/index.html
@@ -285,6 +285,18 @@
               </ul>
             </div>
           </div>
+          <div class="row cuadro-ubicaciones cd-extra">
+            <div class="col-lg-6 col-md-6 col-sm-6 ubicaciones ">
+              <h4 class="ciudad ">CELAYA</h4>
+              <ul>
+                <li>Blvd. de convenciones No. 201</li>
+                <li>Fracc. Puerta de Ote</li>
+                <li>C.P. 25010</li>
+                <li>Celaya, Guanajuato. Mex</li>
+                <li>Tel. (844) 413-1313.</li>
+              </ul>
+            </div>
+          </div>
           
         </div>
         <div class="col-lg-3">
