nueva dirección Celaya

--- a/contacto/index.html
+++ b/contacto/index.html
@@ -123,9 +123,8 @@
         <div class="col-lg-12 celaya">
           <span class="ciudad"> Celaya </span> <br />
           <p class="info-ciudad">
-            Celaya celayita celaya
-            <br />Delagación de Celaya <br />C.P. 01234 <br />Tel.
-            (55)5555555
+            Colonia San Martín de Camargo
+            <br />Celaya, Guanajuato <br />C.P. 25010 <br />
           </p>
         </div>
       </div>
