--- a/index.html
+++ b/index.html
@@ -285,15 +285,13 @@
               </ul>
             </div>
           </div>
-          <div class="row cuadro-ubicaciones cd-extra">
-            <div class="col-lg-6 col-md-6 col-sm-6 ubicaciones ">
+          <div class="row cuadro-ubicaciones ">
+            <div class="col-lg-6 col-md-6 col-sm-6 ubicaciones cd-extra">
               <h4 class="ciudad ">CELAYA</h4>
               <ul>
-                <li>Blvd. de convenciones No. 201</li>
-                <li>Fracc. Puerta de Ote</li>
+                <li>Colonia San Martín de Camargo</li>
                 <li>C.P. 25010</li>
                 <li>Celaya, Guanajuato. Mex</li>
-                <li>Tel. (844) 413-1313.</li>
               </ul>
             </div>
           </div>
