--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <h2>
-              El tiempo que he trabajado con Exvasa nos han apoyado en el cambio constante de puntos de recolección, 
+              <i class="fas fa-quote-left"></i> El tiempo que he trabajado con Exvasa nos han apoyado en el cambio constante de puntos de recolección, 
               entendiendo siempre que estos cambios son solicitados por la difícil situación que se vive en la zona. 
               Esto genera tranquilidad al personal que recibe el servicio y a la empresa en general. Otro punto importante, 
               es que siempre muestran apertura para recibir retroalimentación cuando esta es requerida, lo cual fortalece 
@@ -197,7 +197,7 @@
           </div>
           <div class="carousel-item">
             <h2>
-              Actualmente las necesidades y requerimientos para el abasto de transporte cada vez son de más exigencia y 
+              <i class="fas fa-quote-left"></i> Actualmente las necesidades y requerimientos para el abasto de transporte cada vez son de más exigencia y 
               sobre todo de mayor compromiso por parte de las líneas transportistas. Para Spiral  Logistics y Clogistics  
               ha sido un complemento ideal para nuestra cadena de suministro el  trabajar con EXVASA , una línea de 
               transporte altamente comprometida y eficiente para llevar a cabo la distribución de todos nuestros clientes 
@@ -212,7 +212,7 @@
           </div>
           <div class="carousel-item">
             <h2>
-              ¡Excelente servicio! EXVASA cuenta con un personal altamente capacitado para recolectar, transportar y 
+              <i class="fas fa-quote-left"></i> ¡Excelente servicio! EXVASA cuenta con un personal altamente capacitado para recolectar, transportar y 
               entregar mercancía en buenas condiciones. Recomendamos su servicio, tienen muy buena atención.
             </h2>
             <img
@@ -221,6 +221,20 @@
               alt="lego-profile"
             />
             <em>Materias Primas Cuellar</em>
+          </div>
+          <div class="carousel-item">
+            <h2>
+              <i class="fas fa-quote-left"></i> Hemos trabajando con Express Valle de Saltillo por varios años por lo cual podemos dar nuestras mejores 
+              referencias en cuanto al trato y eficacia tanto de Oficina como de Operadores de transporte, personas 
+              honorables y amables siempre con la mejor disposición para brindarnos el mejor de los servicios. 
+              Calidad y servicio siempre al 100%. - 
+            </h2>
+            <img
+              class="testimonial-img"
+              src="resources/img/8.jpg"
+              alt="lego-profile"
+            />
+            <em>Oficina de ventas Grupo Aprendi</em>
           </div>
         </div>
         <a
@@ -384,3 +398,5 @@
     ></script>
   </body>
 </html>
+
+
