--- a/servicios/index.html
+++ b/servicios/index.html
@@ -73,14 +73,10 @@
         <div class="row">
           <div class="col-lg-12 texto-servicios">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. A arcu
-              cursus vitae congue mauris rhoncus aenean vel elit. Dignissim
-              suspendisse in est ante in nibh mauris. <br />
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. A arcu
-              cursus vitae congue mauris rhoncus aenean vel elit. Dignissim
-              suspendisse in est ante in nibh mauris.
+              En Express Valle de Saltillo contamos una amplia gama de servicios logísticos diseñados para satisfacer las necesidades específicas de 
+              todo tipo de empresas y particulares. 
+              <br><br>
+              A continuación hacemos mención de nuestro portafolio de servicios:
             </p>
           </div>
         </div>
