logo de testimonios

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </h2>
             <img
               class="testimonial-img"
-              src="resources/img/6.jpg"
+              src="resources/img/logo-ryder.png"
               alt="ranchero-profile"
             />
             <em>Sr. Operations - Ryder México</em>
@@ -205,7 +205,7 @@
             </h2>
             <img
               class="testimonial-img"
-              src="resources/img/2.jpg"
+              src="resources/img/logo-clogistics.png"
               alt="lego-profile"
             />
             <em>Gerencia de Compras Clogistics</em>
@@ -217,7 +217,7 @@
             </h2>
             <img
               class="testimonial-img"
-              src="resources/img/8.jpg"
+              src="resources/img/logo-materias-primas-cuellas.jpeg"
               alt="lego-profile"
             />
             <em>Materias Primas Cuellar</em>
@@ -231,7 +231,7 @@
             </h2>
             <img
               class="testimonial-img"
-              src="resources/img/8.jpg"
+              src="resources/img/logo-grupoaprendi.gif"
               alt="lego-profile"
             />
             <em>Oficina de ventas Grupo Aprendi</em>
