logo de cuellar en blanco

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             </h2>
             <img
               class="testimonial-img"
-              src="resources/img/logo-materias-primas-cuellas.jpeg"
+              src="resources/img/logo-materias-primas-cuellar.png"
               alt="lego-profile"
             />
             <em>Materias Primas Cuellar</em>
