--- a/contacto/index.html
+++ b/contacto/index.html
@@ -22,6 +22,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../resources/modal_style.css" />
     <link rel="stylesheet" href="queries.css" />
     <!--===============================================================================================-->
     <link
@@ -52,16 +53,19 @@
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="css/util.css" />
     <!--===============================================================================================-->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </head>
   <body>
-     <!-- HERO IMAGE / VIDEO -->
-     <section id="hero">
+    <!-- HERO IMAGE / VIDEO -->
+    <section id="hero">
       <header>
         <nav class="navbar navbar-expand-lg sticky-top navbar-light">
-          <a href="/"><img 
-            class="navbar-brand logo" 
-            src="../resources/img/IMG-0246.PNG"/>
-        </a>
+          <a href="/"
+            ><img
+              class="navbar-brand logo"
+              src="../resources/img/IMG-0246.PNG"
+            />
+          </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -71,12 +75,15 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-          <span class="navbar-toggler-icon">   
-            <i class="fas fa-bars" style="color:#204acf; font-size:24px;"></i>
-          </span>
+            <span class="navbar-toggler-icon">
+              <i class="fas fa-bars" style="color:#204acf; font-size:24px;"></i>
+            </span>
           </button>
 
-          <div class=" collapse sticky-top navbar-collapse" id="navbarSupportedContent">
+          <div
+            class=" collapse sticky-top navbar-collapse"
+            id="navbarSupportedContent"
+          >
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
                 <a class="nav-link active" href="/"
@@ -151,11 +158,68 @@
 
     </section> -->
 
+    <div
+      class="modal fade"
+      id="successModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="successModallabel"
+      aria-hidden="true"
+      data-backdrop="static"
+      data-keyboard="false"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            <div class="spinner" id="spinner">
+              <div class="spinner-border text-primary" role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+            </div>
+            <div
+              class="message-container"
+              id="message-container"
+              style="display: none;"
+            >
+              <div class="icon-container text-center">
+                <i class="far fa-check-circle"></i>
+              </div>
+              <h4>
+                Tu mensaje ha sido enviado, nos pondremos en contacto contigo.
+              </h4>
+            </div>
+          </div>
+          <div
+            class="modal-footer text-center"
+            id="modal-footer"
+            style="display: none;"
+          >
+            <a href=".#message-send">
+              <button type="button" class="btn btn-primary">
+                Enviar otro mensaje
+              </button>
+            </a>
+            <a href="../index.html">
+              <button type="button" class="btn btn-primary">
+                Ir a pagina principal
+              </button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="bg-contact2" style="background-image: url('images/bg-01.jpg');">
       <div class="container-contact2">
         <div class="wrap-contact2">
-          <form class="contact2-form validate-form">
-            <span class="contact2-form-title">
+          <form
+            id="form"
+            class="contact2-form validate-form"
+            method="POST"
+            action="https://mailapi.rlopez0689.now.sh/submit"
+            onsubmit="return false;"
+          >
+            <span id="message-send" class="contact2-form-title">
               Envianos un mensaje
             </span>
 
@@ -163,7 +227,7 @@
               class="wrap-input2 validate-input"
               data-validate="Name is required"
             >
-              <input class="input2" type="text" name="name" />
+              <input class="input2" type="text" name="name" required />
               <span class="focus-input2" data-placeholder="NOMBRE"></span>
             </div>
 
@@ -171,7 +235,7 @@
               class="wrap-input2 validate-input"
               data-validate="Valid email is required: ex@abc.xyz"
             >
-              <input class="input2" type="text" name="email" />
+              <input class="input2" type="text" name="email" required />
               <span class="focus-input2" data-placeholder="E-MAIL"></span>
             </div>
 
@@ -179,9 +243,22 @@
               class="wrap-input2 validate-input"
               data-validate="Message is required"
             >
-              <textarea class="input2" name="message"></textarea>
+              <textarea class="input2" name="message" required></textarea>
               <span class="focus-input2" data-placeholder="MENSAJE"></span>
             </div>
+
+            <div
+              class="g-recaptcha"
+              data-sitekey="6LfKiLcUAAAAAIH0TUe1mBXQUhr4LF4STdEGh3N7"
+              data-size="compact"
+            ></div>
+            <p
+              id="captcha-fail"
+              style="display:none;color:red; text-align: center;"
+            >
+              Please review the Captcha
+            </p>
+            <br />
 
             <div class="container-contact2-form-btn">
               <div class="wrap-contact2-form-btn">
@@ -191,6 +268,11 @@
                 </button>
               </div>
             </div>
+            <input
+              type="hidden"
+              name="template-name"
+              value="ExpressSaltilloEmailTemplateMessage"
+            />
           </form>
         </div>
       </div>
@@ -210,9 +292,10 @@
         <div class="col-lg-6">
           <ul class="social-links">
             <li>
-              <a href="https://www.facebook.com/exvasa/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.facebook.com/exvasa/" target="_blank"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
             </li>
-            
           </ul>
         </div>
       </div>
@@ -254,6 +337,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script src="../resources/form_send.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
