add send to contact on index.html

--- a/contacto/index.html
+++ b/contacto/index.html
@@ -86,7 +86,7 @@
           >
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="/"
+                <a class="nav-link" href="/"
                   >Inicio <span class="sr-only">(current)</span></a
                 >
               </li>
@@ -97,7 +97,7 @@
                 <a class="nav-link" href="../cotizador/">Cotizador</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link active" href="#">Contacto</a>
               </li>
             </ul>
           </div>
@@ -194,7 +194,7 @@
             id="modal-footer"
             style="display: none;"
           >
-            <a href=".#message-send">
+            <a href="/contacto#message-send">
               <button type="button" class="btn btn-primary">
                 Enviar otro mensaje
               </button>
@@ -216,7 +216,7 @@
             id="form"
             class="contact2-form validate-form"
             method="POST"
-            action="https://mailapi.rlopez0689.now.sh/submit"
+            action="https://mailapi.exvasa.now.sh/submit"
             onsubmit="return false;"
           >
             <span id="message-send" class="contact2-form-title">
@@ -249,7 +249,7 @@
 
             <div
               class="g-recaptcha"
-              data-sitekey="6LfKiLcUAAAAAIH0TUe1mBXQUhr4LF4STdEGh3N7"
+              data-sitekey="6LcIKb8UAAAAAJ6d5TWa05Wgb8jIxyZyJq3VripX"
               data-size="compact"
             ></div>
             <p
