--- a/cotizador/index.html
+++ b/cotizador/index.html
@@ -127,7 +127,7 @@
             id="form"
             class="my-form"
             method="POST"
-            action="https://mailapi.rlopez0689.now.sh/submit"
+            action="https://mailapi.exvasa.now.sh/submit"
             onsubmit="return false;"
           >
             <p>¿El articulo viaja en tarima?</p>
@@ -340,7 +340,7 @@
               />
               <div
                 class="g-recaptcha"
-                data-sitekey="6LfKiLcUAAAAAIH0TUe1mBXQUhr4LF4STdEGh3N7"
+                data-sitekey="6LcIKb8UAAAAAJ6d5TWa05Wgb8jIxyZyJq3VripX"
                 data-size="compact"
               ></div>
               <p id="captcha-fail" style="display:none;color:red;">
