--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
     <link rel="stylesheet" href="resources/queries.css" />
     <link rel="stylesheet" href="resources/modal_style.css" />
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155747195-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-155747195-1');
+    </script>
+
   </head>
   <body>
     <div
