--- a/contacto/index.html
+++ b/contacto/index.html
@@ -54,6 +54,14 @@
     <link rel="stylesheet" type="text/css" href="css/util.css" />
     <!--===============================================================================================-->
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155747195-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-155747195-1');
+    </script>
   </head>
   <body>
     <!-- HERO IMAGE / VIDEO -->
