--- a/cotizador/index.html
+++ b/cotizador/index.html
@@ -26,6 +26,14 @@
     <link rel="stylesheet" href="../resources/modal_style.css" />
     <link rel="stylesheet" href="resources/queries.css" />
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155747195-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-155747195-1');
+    </script>
   </head>
   <body>
     <div class="container-fluid form-container resize-container">
