--- a/servicios/index.html
+++ b/servicios/index.html
@@ -23,6 +23,14 @@
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="queries.css" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155747195-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-155747195-1');
+    </script>
   </head>
   <body>
     <!-- HERO IMAGE / VIDEO -->
